@@ -241,6 +241,10 @@
     "stats.time.current": "Time Played",
     "stats.group.all": "All-Time Stats",
     "stats.group.current": "Current Game Stats",
+    "challendge.blackSky.desc": "Restart the game with no astronomical events to observe.<br><br>Goal: Build one Space Beacon.",
+    "challendge.blackSky.effect.desc": "Elders come early.",
+    "challendge.blackSky.label": "Black Sky",
+    "challendge.blackSky.event": "The night is dark, no stars to observe.",
     "challendge.1000Years.desc": "Restart the game with a half-life time.<br><br>Goal: Reach year 1000.",
     "challendge.1000Years.effect.desc": "Colder combustion of Time Crystal.",
     "challendge.1000Years.label": "1000 years",
